src/main/java/com/example/demo/error/ErrorResponse.java
package com.example.demo.error;


import com.fasterxml.jackson.annotation.JsonProperty;
import lombok.AllArgsConstructor;
import lombok.EqualsAndHashCode;
import lombok.NoArgsConstructor;

@AllArgsConstructor
@NoArgsConstructor
@EqualsAndHashCode
public class ErrorResponse {

    @JsonProperty
    public String errorMessage;

}
